--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
 						<p>Click the resumé to view/print in PDF file</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/my_resume.pdf" target="_blank"><img src="images/resume/resume_a.jpg" alt="my_resume" class="image fit"/></a>
-								<a href="images/resume/my_resume.pdf" target="_blank"><img src="images/resume/resume_b.jpg" alt="my_resume" class="image fit"/></a>
+								<a href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" target="_blank"><img src="images/resume/part_a.jpg" alt="my_resume" class="image fit"/></a>
+								<a href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" target="_blank"><img src="images/resume/part_b.jpg" alt="my_resume" class="image fit"/></a>
 							</div>
 								<!--
 							<div class="col-4 col-12-mobile" style="; width: 39%;">
