--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<section id="top" class="one dark cover">
 						<div class="container" style="height: 39em;">
 							<header>
-								<h2 class="alt">Hi! MY name is <strong>Kien Chung</strong>.</h2>
+								<h2 class="alt">Hi! My name is <strong>Kien Chung</strong>.</h2>
 								<!-- <p>I'm a <strong>data analyst</strong> who enjoys analyzing dataset and collecting data pieces</p> -->
 								<!-- <p>I turn boring data into business insights to support data-driven decisions.</p> -->
 								<p>My role is crucial in helping businesses make <strong>informed decisions</strong>. <br>By transforming raw data into <strong>meaningful insights</strong>, I can provide valuable information <br>that can help a company understand its strengths, weaknesses,opportunities, and threats.</p>
