google sertificates mb

--- a/google_certificates.html
+++ b/google_certificates.html
@@ -75,7 +75,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Foundations: <br>Data, Data, Everywhere</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/QL7AX4LEHPB9" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_1.png" alt="google_certificate1" /></a>
+									<a href="https://coursera.org/verify/QL7AX4LEHPB9" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_1.jpg" alt="google_certificate1" /></a>
 								</article>
 							</div>
 							<!-- 2 -->
@@ -84,7 +84,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Ask Questions to <br>Make Data-Driven Decisions</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/28K33YFRLK28" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_2.png" alt="google_certificate2" /></a>
+									<a href="https://coursera.org/verify/28K33YFRLK28" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_2.jpg" alt="google_certificate2" /></a>
 								</article>
 							</div>
 							<!-- 3 -->
@@ -93,7 +93,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Prepare Data <br>for Exploration</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/T49R3KYKTSB6" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_3.png" alt="google_certificate3" /></a>
+									<a href="https://coursera.org/verify/T49R3KYKTSB6" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_3.jpg" alt="google_certificate3" /></a>
 								</article>
 							</div>
 							<!-- 4 -->
@@ -102,7 +102,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Process Data <br>from Dirty to Clean</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/PG5U2PVV7PVY" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_4.png" alt="google_certificate4" /></a>
+									<a href="https://coursera.org/verify/PG5U2PVV7PVY" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_4.jpg" alt="google_certificate4" /></a>
 								</article>
 							</div>
 							<!-- 5 -->
@@ -111,7 +111,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Analyze Data <br>to Answer Questions</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/HDERGTMXE738" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_5.png" alt="google_certificate5" /></a>
+									<a href="https://coursera.org/verify/HDERGTMXE738" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_5.jpg" alt="google_certificate5" /></a>
 								</article>
 							</div>
 							<!-- 6 -->
@@ -120,7 +120,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Share Data Through <br>the Art of Visualization</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/28HUGXHCMBNR" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_6.png" alt="google_certificate6" /></a>
+									<a href="https://coursera.org/verify/28HUGXHCMBNR" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_6.jpg" alt="google_certificate6" /></a>
 								</article>
 							</div>
 							<!-- 7 -->
@@ -129,7 +129,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Data Analysis <br>with R Programming</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/JXCHQ3YT8B7G" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_7.png" alt="google_certificate7" /></a>
+									<a href="https://coursera.org/verify/JXCHQ3YT8B7G" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_7.jpg" alt="google_certificate7" /></a>
 								</article>
 							</div>
 							<!-- 8 -->
@@ -138,7 +138,7 @@
 									<header style="background-color: rgb(84,131,237);">
 										<h3 style="padding: 0.25em;"><strong style="color: white !important;">Google Data Analytics <br>Capstone Project</strong></h3>
 									</header>
-									<a href="https://coursera.org/verify/SMFK63JXUH7T" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_8.png" alt="google_certificate8" /></a>
+									<a href="https://coursera.org/verify/SMFK63JXUH7T" target="_blank" class="image fit frame"><img src="images/google/course_certificates/course_8.jpg" alt="google_certificate8" /></a>
 								</article>
 							</div>
                         </div>
