--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Google Data Analytics <br>Professional Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="https://coursera.org/verify/professional-cert/TK7P7ZUUYNU2" target="_blank" class="image fit frame"><img src="images/google/Google_Certificate.png" alt="google_certificate" /></a>
+										<a href="https://coursera.org/verify/professional-cert/TK7P7ZUUYNU2" target="_blank" class="image fit frame"><img src="images/google/Google_Certificate.jpeg" alt="google_certificate" /></a>
 										<header style="background-color: rgb(84,131,237); margin: 1px 0px 0px 0px;">
 											<a href="google_certificates.html"><h3 style="padding: 0.25em;"><strong style="color: white !important;;">View 8 complete courses here</strong></h3></a>
 										</header>
@@ -369,8 +369,8 @@
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>IBM Data Analyst <br>Professional Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="https://coursera.org/verify/UJSGV7URHZY9" target="_blank" class="image fit frame"><img src="images/ibm/ibm_Certificate_Intro.png" alt="ibm_certificate" /></a>
-										<a href="https://coursera.org/verify/QXZAWAG5AQT5" target="_blank" class="image fit frame"><img src="images/ibm/ibm_Certificate_Excel.png" alt="ibm_certificate" /></a>
+										<a href="https://coursera.org/verify/UJSGV7URHZY9" target="_blank" class="image fit frame"><img src="images/ibm/ibm_Certificate_Intro.jpeg" alt="ibm_certificate" /></a>
+										<a href="https://coursera.org/verify/QXZAWAG5AQT5" target="_blank" class="image fit frame"><img src="images/ibm/ibm_Certificate_Excel.jpeg" alt="ibm_certificate" /></a>
 									</article>
 								</div>
 
@@ -386,7 +386,7 @@
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>SQL for Data Science <br>Specialization Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="https://coursera.org/verify/N3NSVNPW4J24" target="_blank" class="image fit frame"><img src="images/ucdavis/ucdavis_Certificate.png" alt="ucdavis_certificate" /></a>
+										<a href="https://coursera.org/verify/N3NSVNPW4J24" target="_blank" class="image fit frame"><img src="images/ucdavis/ucdavis_Certificate.jpeg" alt="ucdavis_certificate" /></a>
 									</article>
 								</div>
 								
