--- a/index.html
+++ b/index.html
@@ -391,6 +391,59 @@
 								</div>
 								
 							</div>
+
+							<div class="row">
+								<!-- Coursera Project Network -->
+								<div class="col-4 col-12-mobile">
+									<article class="item" style="margin: 20px 0px;">
+										<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="google_logo" /></a>
+										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
+											<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank">
+												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Visualizing with <br>Tableau Certificate</strong></h3>
+											</a>
+										</header>
+										<a href="https://coursera.org/verify/DUFDPETZAM8D" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate.jpeg" alt="google_certificate" /></a>
+									</article>
+								</div>
+
+								<br>
+
+								<!-- GOOGLE 
+								<div class="col-4 col-12-mobile">
+									<article class="item" style="margin: 20px 0px;">
+										<a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank" class="image fit"><img src="images/google/google.jpg" alt="google_logo" /></a>
+										<header style="background-color: rgb(84,131,237); margin: 1px 0px;">
+											<a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank">
+												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Google Data Analytics <br>Professional Certificate</strong></h3>
+											</a>
+										</header>
+										<a href="https://coursera.org/verify/professional-cert/TK7P7ZUUYNU2" target="_blank" class="image fit frame"><img src="images/google/Google_Certificate.jpeg" alt="google_certificate" /></a>
+										<header style="background-color: rgb(84,131,237); margin: 1px 0px 0px 0px;">
+											<a href="google_certificates.html"><h3 style="padding: 0.25em;"><strong style="color: white !important;;">View 8 complete courses here</strong></h3></a>
+										</header>
+									</article>
+								</div> -->
+
+								<br>
+
+								<!-- GOOGLE 
+								<div class="col-4 col-12-mobile">
+									<article class="item" style="margin: 20px 0px;">
+										<a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank" class="image fit"><img src="images/google/google.jpg" alt="google_logo" /></a>
+										<header style="background-color: rgb(84,131,237); margin: 1px 0px;">
+											<a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank">
+												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Google Data Analytics <br>Professional Certificate</strong></h3>
+											</a>
+										</header>
+										<a href="https://coursera.org/verify/professional-cert/TK7P7ZUUYNU2" target="_blank" class="image fit frame"><img src="images/google/Google_Certificate.jpeg" alt="google_certificate" /></a>
+										<header style="background-color: rgb(84,131,237); margin: 1px 0px 0px 0px;">
+											<a href="google_certificates.html"><h3 style="padding: 0.25em;"><strong style="color: white !important;;">View 8 complete courses here</strong></h3></a>
+										</header>
+									</article>
+								</div> -->
+
+							</div>
+
 						</div>	
 						<br>
 					</section>
