--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 								<h2>My Certification</h2>
 							</header>
 
-							<p>Click the certificate for verification and full size image</p>
+							<p>Click the certificate for verification</p>
 
 							<div class="row">
 								
