--- a/google_certificates.html
+++ b/google_certificates.html
@@ -44,7 +44,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html#certification" id="backto-portfolio-link"><span class="icon solid fa-certificate">Back to My Certification</span></a></li>
+								<li><a href="index.html#certification" id="backto-portfolio-link"><span class="icon solid fa-certificate" style="color: red">Back to My Certification</span></a></li>
 							</ul>
 						</nav>
 				</div>
