--- a/project_a.html
+++ b/project_a.html
@@ -44,7 +44,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase">Back to My Portfolio</span></a></li>
+								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject" id="aboutthisproject-link"><span class="icon solid fa-book-open">About this Project</span></a></li>
 								<li><a href="#diagram" id="dataset-link"><span class="icon solid fa-diagram-next">Diagram</span></a></li>
 								<li><a href="#analysis" id="analysis-link"><span class="icon solid fa-file-code">My analysis</span></a></li>
