--- a/project_b.html
+++ b/project_b.html
@@ -44,7 +44,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase">Back to My Portfolio</span></a></li>
+								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject" id="aboutthisproject-link"><span class="icon solid fa-book-open">About this Project</span></a></li>
 								<li><a href="#snapshots" id="snapshots-link"><span class="icon solid fa-image">Snapshots</span></a></li>
 								<li><a href="#pivot" id="pivot-link"><span class="icon solid fa-table">Pivot Tables</span></a></li>
@@ -96,7 +96,7 @@
 						<br>
                         <p>
 							The dataset used in this lab comes from the following source under a Public Domain license: <br>
-							<a href="https://data.montgomerycountymd.gov/Government/Fleet-Equipment-Inventory/93vc-wpdr">https://data.montgomerycountymd.gov/Government/Fleet-Equipment-Inventory/93vc-wpdr</a>
+							<a href="https://data.montgomerycountymd.gov/Government/Fleet-Equipment-Inventory/93vc-wpdr" target="_blank">[https://data.montgomerycountymd.gov/Government/Fleet-Equipment-Inventory/93vc-wpdr]</a>
 							<br><br>
 							We are using a modified subset of that dataset for the lab, so to follow the lab instructions successfully please use the dataset provided with the lab, rather than the dataset from the original source.							
 						</p>
