--- a/project_c.html
+++ b/project_c.html
@@ -44,9 +44,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase">Back to My Portfolio</span></a></li>
+								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject"><span class="">About this Project</span></a></li>
 								<li><a href="#dashboard"><span>Tableau Dashboard</span></a></li>
+								<li><a href="#public"><span>Tableau Public</span></a></li>
 								<li><a href="#tasks"><span>Tasks</span></a></li>
 								<li><a href="#worksheets"><span>Worksheets</span></a></li>
 								<li><a href="#datasetsnapshot"><span>Dataset Snapshot</span></a></li>
@@ -77,7 +78,14 @@
 							<br>
 							<h4>The purpose of this project is to showcase my skills and knowledge in Tableau Data Visualization</h4>
                         </header>
-						
+						<img src="images/project_C_tableau/tableau_logo.png" alt="excel_logo" />
+						<br>
+						<br>
+						<h3>Scenario</h3>
+						<br>
+                        <p>In this project, you will learn the basics of using Tableau, which is one of the most popular business intelligence tools out there, and you will learn how to use Tableau to visualize the popular citibike trips data-set.
+						</p>
+						<p>You will learn how to import data, understand measures and dimensions, understand work-spaces, use filters, use sheets, and create and export dashboards.</p>
                     </div>
                 </section>
 
@@ -85,14 +93,31 @@
 				<section id="dashboard" class="three">
                     <div class="container">
                         <header>
-                            <h2>Tableau Dashboard</h2>
+                            <h2>Tableau Dashboard - NYC Citi Bike Trips</h2>
                         </header>
 						<img src="images/project_C_tableau/dashboard_main.jpg" alt="dashboard" style="border: 5px solid black; width: 100%;">
                     </div>
                 </section>
 
+				<!-- Tableau Public Info -->
+				<section id="public" class="four">
+                    <div class="container">
+                        <header>
+                            <h2>Tableau Public Profile & Dashboard Link</h2>
+                        </header>
+						<p>
+							<h3>My Tableau Public Profile Link</h3>
+							<a href="https://public.tableau.com/app/profile/kien.chung" target="_blank">https://public.tableau.com/app/profile/kien.chung</a>
+						</p>
+						<p>
+							<h3>NYC Citi Bike Trips Dashboard Link</h3>
+							<a href="https://public.tableau.com/app/profile/kien.chung/viz/NYCCitiBikeTrips_16768696194370/Feb2023" target="_blank">https://public.tableau.com/app/profile/kien.chung/viz/NYCCitiBikeTrips_16768696194370/Feb2023</a>
+						</p>
+                    </div>
+                </section>
+
 				<!-- Tasks -->
-				<section id="tasks" class="four">
+				<section id="tasks" class="five">
                     <div class="container">
                         <header>
                             <h2>Tasks</h2>
@@ -102,7 +127,7 @@
                 </section>
 
 				<!-- Worksheets -->
-				<section id="worksheets" class="five">
+				<section id="worksheets" class="six">
                     <div class="container">
                         <header>
                             <h2>Worksheets</h2>
@@ -148,7 +173,7 @@
                 </section>
 
 				<!-- Dataset Snapshot -->
-				<section id="datasetsnapshot" class="six">
+				<section id="datasetsnapshot" class="seven">
                     <div class="container">
                         <div class="container">
 							<header>
@@ -161,7 +186,7 @@
                 </section>
 				
 				<!-- Dataset Info & Download -->
-				<section id="datasetinfodownload" class="seven">
+				<section id="datasetinfodownload" class="eight">
 					<div class="container">
 						<header>
                             <h2>Dataset Information & Download</h2>
