--- a/project_three.html
+++ b/project_three.html
@@ -44,7 +44,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase">Back to My Portfolio</span></a></li>
+								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject" id="aboutthisproject-link"><span class="icon solid fa-book-open">...</span></a></li>
 								<li><a href="#snapshots" id="snapshots-link"><span class="icon solid fa-image">...</span></a></li>
 								<li><a href="#pivot" id="pivot-link"><span class="icon solid fa-table">...</span></a></li>
