--- a/project_two.html
+++ b/project_two.html
@@ -44,7 +44,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase">Back to My Portfolio</span></a></li>
+								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject" id="aboutthisproject-link"><span class="icon solid fa-book-open">About this Project</span></a></li>
                                 <li><a href="#visualization" id="visualization-link"><span class="icon solid fa-chart-column">Visualization</span></a></li>
                                 <li><a href="#keyfindings" id="keyfindings-link"><span class="icon solid fa-check-to-slot">Key Findings</span></a></li>
