new link proj c download lfs

--- a/project_c.html
+++ b/project_c.html
@@ -193,7 +193,7 @@
                         </header>
 						<p>Total of 843,114 trip records in February, 2018</p>
 						<p>CSV file - 160 MB</p>
-						<a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_C_tableau/201802-citibike-tripdata.zip" target="_blank">[Download zip file via Github LFS here]</a>
+						<a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_C_tableau/project_c_data.csv.zip" target="_blank">[Download zip file via Github LFS here]</a>
 					</div>
 				</section>
 
