data download lfs project 1

--- a/project_one.html
+++ b/project_one.html
@@ -255,7 +255,7 @@
 							<p>Project Start Date: December, 2022 </p>
 						</header>
 						<p>
-							<a href="" target="_blank">[Download zip file via Github LFS here]</a>
+							<a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_1_bike/tripdata.zip" target="_blank">[Download zip file via Github LFS here]</a>
 						</p>
 						<p>
 							Previous 12 months of Cyclistic's trip data 
