--- a/project_c.html
+++ b/project_c.html
@@ -122,7 +122,16 @@
                         <header>
                             <h2>Tasks</h2>
                         </header>
-						<p> testinggggggggggg do it todayyyyyyyyyyyy</p>
+						<div class="float-left">
+							<ul>
+								<li>Import the Citibike Trips Data.</li>
+								<li>Plot 6 most popular Start Stations and End Stations.</li>
+								<li>Visualize the distribution of number of trip starts / stops for each hour of the day.</li>
+								<li>Create bar graph to show Average Trip dDuration of Customer and Subscriber by Gender.</li>
+								<li>Display the Distribution of Common End Stations on Popular Start Stations.</li>
+								<li>Create a final dashboard consists of 6 visualizations.</li>
+							</ul>
+						</div>
                     </div>
                 </section>
 
