--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
 										<a href="project_three.html" class="image fit"><img src="images/project_3_ibm_c5_python/temp_pic.jpg" alt="" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 3 (Coming)</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Python <br>Project</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Data Analysis & Visualization <br>with Python Project</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Utilizing -</strong>
 										<li>Python</li>
-										<li>...</li>
-										<li>...</li>
+										<li>Jupyter Notebook</li>
+										<li>matplotlib</li>
 									</ul>
 								</div>
 
