--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
+							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
 							<p>Data Science - Data Analyst</p>
 						</div>
@@ -124,7 +124,7 @@
 								<!-- 1 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_one.html" class="image fit"><img src="images/project_1_bike/bike.jpg" alt="cyclisticbike" /></a>
+										<a href="project_one.html" class="image fit"><img src="images/project_1_bike/bike.jpg" alt="cyclisticbike_project" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 1</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Cyclistic Bike-share <br>Marketing Analysis</strong></h3>
@@ -142,7 +142,7 @@
 								<!-- 2 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_two.html" class="image fit"><img src="images/project_2_bellabeat/bellabeat.jpg" alt="bellabeat" /></a>
+										<a href="project_two.html" class="image fit"><img src="images/project_2_bellabeat/bellabeat.jpg" alt="bellabeat_project" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 2 (In Progress)</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Bellabeat Smart Wellness <br>Product Analysis</strong></h3>
@@ -160,7 +160,7 @@
 								<!-- 3 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_three.html" class="image fit"><img src="images/project_3_ibm_c5_python/temp_pic.jpg" alt="" /></a>
+										<a href="project_three.html" class="image fit"><img src="images/project_3_ibm_c5_python/temp_pic.jpg" alt="python_project" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project 3 (Coming)</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Data Analysis & Visualization <br>with Python Project</strong></h3>
