--- a/project_b.html
+++ b/project_b.html
@@ -37,7 +37,7 @@
 				<div class="top">
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
+							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
 							<p>Data Science - Data Analyst</p>
 						</div>
@@ -113,7 +113,7 @@
 						<div>
 							<div>
 								<p style="font-weight: bold;">Figure I: Import raw data</p>
-								<img src="images/project_B_ibm_c2_excel/start.png" alt="">
+								<img src="images/project_B_ibm_c2_excel/start.png" alt="raw_data" style="width: 35%;">
 							</div>
 							<br>
 							<div class="float-left">
@@ -128,7 +128,7 @@
 							<br>
 							<div>
 								<p style="font-weight: bold;">Figure II: Cleaned and analysis-ready data</p>
-								<img src="images/project_B_ibm_c2_excel/end.png" alt="">
+								<img src="images/project_B_ibm_c2_excel/end.png" alt="cleaned_data" style="width: 35%;">
 							</div>
 						</div>
                     </div>
@@ -147,22 +147,22 @@
 									Department (category) and Equiptment Count (values) <br>
 									Equiptment Class (category) and Equiptment Count (values)
 								</p>
-								<img src="images/project_B_ibm_c2_excel/pivot1.png" alt="">
-								<img src="images/project_B_ibm_c2_excel/pivot2.png" alt="">
+								<img src="images/project_B_ibm_c2_excel/pivot1.png" alt="pivot_table1">
+								<img src="images/project_B_ibm_c2_excel/pivot2.png" alt="pivot_table2">
 							</div>
 							<br>
 							<div>
 								<p style="font-weight: bold;">Table III <br>
 									Department (category) with Equipment Class (sub-category) and Equipment Count (values)
 								</p>
-								<img src="images/project_B_ibm_c2_excel/pivot3.png" alt="">
+								<img src="images/project_B_ibm_c2_excel/pivot3.png" alt="pivot_table3">
 							</div>
 							<br>
 							<div>
 								<p style="font-weight: bold;">Table IV <br>
 									Equipment Class (category) with Department (sub-category) and Equipment Count (values)
 								</p>
-								<img src="images/project_B_ibm_c2_excel/pivot4.png" alt="">
+								<img src="images/project_B_ibm_c2_excel/pivot4.png" alt="pivot_table4">
 							</div>
 						</div>
                     </div>
@@ -175,7 +175,7 @@
                             <h2>Calculated Values</h2>
                         </header>
 						<br>
-						<img src="images/project_B_ibm_c2_excel/functions.png" alt="">
+						<img src="images/project_B_ibm_c2_excel/functions.png" alt="calculated_values" style="width: 75%;">
                     </div>
                 </section>
 
@@ -187,7 +187,7 @@
                         </header>
 						<br>
 						
-						<img src="images/project_B_ibm_c2_excel/vlookup.png" alt="">
+						<img src="images/project_B_ibm_c2_excel/vlookup.png" alt="excel_lookup" style="width: 75%;">
                     </div>
                 </section>
 
