--- a/project_c.html
+++ b/project_c.html
@@ -37,7 +37,7 @@
 				<div class="top">
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
+							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
 							<p>Data Science - Data Analyst</p>
 						</div>
@@ -145,17 +145,17 @@
 						<div class="row" style="margin-top: 2px;">
                             <div class="col-4 col-12-mobile">
                                 <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_C_tableau/worksheets/end_stations.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/end_stations.png" alt="" /></a>
+                                    <a href="images/project_C_tableau/worksheets/end_stations.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/end_stations.png" alt="worksheet_1" /></a>
                                 </article>
                             </div>
                             <div class="col-4 col-12-mobile">
                                 <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_C_tableau/worksheets/start_stations.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/start_stations.png" alt="" /></a>
+                                    <a href="images/project_C_tableau/worksheets/start_stations.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/start_stations.png" alt="worksheet_2" /></a>
                                 </article>
                             </div>
 							<div class="col-4 col-12-mobile">
                                 <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_C_tableau/worksheets/start_popular.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/start_popular.png" alt="" /></a>
+                                    <a href="images/project_C_tableau/worksheets/start_popular.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/start_popular.png" alt="worksheet_3" /></a>
                                 </article>
                             </div>
 						</div>
@@ -163,17 +163,17 @@
 						<div class="row" style="margin-top: 2px;">
                             <div class="col-4 col-12-mobile">
                                 <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_C_tableau/worksheets/end_time.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/end_time.png" alt="" /></a>
+                                    <a href="images/project_C_tableau/worksheets/end_time.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/end_time.png" alt="worksheet_4" /></a>
                                 </article>
                             </div>
                             <div class="col-4 col-12-mobile">
                                 <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_C_tableau/worksheets/start_time.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/start_time.png" alt="" /></a>
+                                    <a href="images/project_C_tableau/worksheets/start_time.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/start_time.png" alt="worksheet_5" /></a>
                                 </article>
                             </div>
 							<div class="col-4 col-12-mobile">
                                 <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_C_tableau/worksheets/trip_duration.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/trip_duration.png" alt="" /></a>
+                                    <a href="images/project_C_tableau/worksheets/trip_duration.png" target="_blank" class="image fit"><img src="images/project_C_tableau/worksheets/trip_duration.png" alt="worksheet_6" /></a>
                                 </article>
                             </div>
 						</div>
