degrees img jpeg to jpg

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 												<h3 style="color: white;">Rutgers State University of New Jersey</h3>
 											</header>
 										</div>
-										<a href="images/education/BachelorsDegree.jpeg" target="_blank" class="image fit"><img src="images/education/BachelorsDegree.jpeg" alt="bachelors_degree"/></a>
+										<a href="images/education/BachelorsDegree.jpg" target="_blank" class="image fit"><img src="images/education/BachelorsDegree.jpg" alt="bachelors_degree"/></a>
 										<div>
 											<header style="background-color: rgb(160,39,55);">
 												<ul class="no-bullets" style="display: inline; color: white;"><strong style="font-weight: bold; color: white;">- Minored -</strong>
@@ -311,7 +311,7 @@
 												<h3 style="color: white;">Atlantic Cape Community College</h3>
 											</header>
 										</div>
-										<a href="images/education/AssociatesDegree.jpeg" target="_blank" class="image fit"><img src="images/education/AssociatesDegree.jpeg" alt="associates_degree" /></a>
+										<a href="images/education/AssociatesDegree.jpg" target="_blank" class="image fit"><img src="images/education/AssociatesDegree.jpg" alt="associates_degree" /></a>
 										<div>
 											<header style="background-color: rgb(28,38,81);">
 												<ul class="no-bullets" style="display: inline; color: white;"><strong style="font-weight: bold; color: white;">- Name Change -</strong>
