--- a/index.html
+++ b/index.html
@@ -259,16 +259,16 @@
 								<!-- E -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="" class="image fit"><img src="images/" alt="" /></a>
+										<a href="" class="image fit"><img src="images/project_E_powerBI_creditdefault/dashboard.jpg" alt="" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project E</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Power BI Visualization <br>Project</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Power BI Visualization <br>Client Credit Card Defaults</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li></li>
-										<li></li>
-										<li></li>
+										<li>Microsoft Power BI</li>
+										<li>Data Visualization</li>
+										<li>Business Intelligence</li>
 									</ul>
 								</div>
 
