--- a/index.html
+++ b/index.html
@@ -243,23 +243,23 @@
 								<!-- D -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="" class="image fit"><img src="images/" alt="" /></a>
+										<a href="project_d.html" class="image fit"><img src="images/project_D_logistics/dashboard.jpg" alt="logistics" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project D</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel & Tableau Project <br>Logistics Analysis</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel & Tableau Project <br>Logistics Demand Analysis</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li></li>
-										<li></li>
-										<li></li>
+										<li>Excel Data Analysis / PivotTable</li>
+										<li>Tableau Visualization</li>
+										<li>Logistics</li>
 									</ul>
 								</div>
 
 								<!-- E -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="" class="image fit"><img src="images/project_E_powerBI_creditdefault/dashboard.jpg" alt="" /></a>
+										<a href="project_e.html" class="image fit"><img src="images/project_E_powerBI_creditdefault/dashboard.jpg" alt="powerBI_1" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project E</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Power BI Visualization <br>Client Credit Card Defaults</strong></h3>
@@ -275,7 +275,7 @@
 								<!-- F -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="" class="image fit"><img src="images/" alt="" /></a>
+										<a href="" class="image fit"><img src="images/" alt="powerBI_2" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project F</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;"></strong></h3>
@@ -483,13 +483,13 @@
 								<!-- Coursera Project Network 1 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin: 20px 0px;">
-										<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="google_logo" /></a>
+										<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="coursera_logo" /></a>
 										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
 											<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank">
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Visualizing with Tableau <br>Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="https://coursera.org/verify/DUFDPETZAM8D" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate.jpeg" alt="tableau_certificate" /></a>
+										<a href="https://coursera.org/verify/DUFDPETZAM8D" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate_tableau.jpeg" alt="tableau_certificate" /></a>
 									</article>
 								</div>
 
@@ -501,13 +501,13 @@
 								<!-- Coursera Project Network 2 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin: 20px 0px;">
-										<a href="https://www.coursera.org/projects/power-bi-desktop" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="google_logo" /></a>
+										<a href="https://www.coursera.org/projects/power-bi-desktop" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="coursera_logo" /></a>
 										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
 											<a href="https://www.coursera.org/projects/power-bi-desktop" target="_blank">
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Getting Started with Power BI <br>Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="" target="_blank" class="image fit frame"><img src="" alt="powerBI_certificate_1" /></a>
+										<a href="https://coursera.org/verify/9TCJGTUQYD75" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate_powerBI.jpeg" alt="powerBI_certificate_1" /></a>
 									</article>
 								</div>
 
@@ -516,13 +516,13 @@
 								<!-- Coursera Project Network 3 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin: 20px 0px;">
-										<a href="https://www.coursera.org/projects/build-dashboards-power-bi" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="google_logo" /></a>
+										<a href="https://www.coursera.org/projects/build-dashboards-power-bi" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="coursera_logo" /></a>
 										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
 											<a href="https://www.coursera.org/projects/build-dashboards-power-bi" target="_blank">
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Build Dashboards with Power BI <br>Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="" target="_blank" class="image fit frame"><img src="" alt="powerBI_certificate_2" /></a>
+										<a href="" target="_blank" class="image fit frame"><img src="images/coursera/" alt="powerBI_certificate_2" /></a>
 									</article>
 								</div>
 
