--- a/project_c.html
+++ b/project_c.html
@@ -78,7 +78,7 @@
 							<br>
 							<h4>The purpose of this project is to showcase my skills and knowledge in Tableau Data Visualization</h4>
                         </header>
-						<img src="images/project_C_tableau/tableau_logo.png" alt="excel_logo" />
+						<img src="images/project_C_tableau/tableau_logo.png" alt="tableau_logo" />
 						<br>
 						<br>
 						<h3>Scenario</h3>
