--- a/project_e.html
+++ b/project_e.html
@@ -96,7 +96,12 @@
                         </header>
                         <div class="float-left">
                             <ul>
-                                <li></li>
+                                <li>Importing the <a href="#datasetinfodownload">raw data</a>.</li>
+								<li>Identify errors and unreadable columns that might affect the accuracy of the reports in the data.</li>
+								<li>Then, <a href="#transformation">transform</a> it to cleaned and analysis-ready dataset within Power BI software.</li>
+								<li>Create different graphs based on variety of factors such as 'EDUCATION_LEVEL' and 'MARITAL_STATUS' that has an effect on credit card default issue.</li>
+								<li>Group the graphs together to create a presentable <a href="#dashboard">dashboard</a> for company's stakeholders.</li>
+								<li>Generate slicers - important visual filter systems on the dashboard.</li>
                             </ul>
                         </div>
                     </div>
@@ -114,8 +119,18 @@
                     </div>
                 </section>
 
+				<!-- File Download -->
+				<section id="pbix_file" class="five">
+                    <div class="container">
+                        <header>
+                            <h2>Complete Power BI Work File Download</h2>
+                        </header>
+                        <a href="images/project_E_powerBI_creditdefault/defaults.pbix" download>[Download pbix-file(complete) here]</a>
+                    </div>
+                </section>
+
                 <!-- Transformation -->
-                <section id="transformation" class="five">
+                <section id="transformation" class="six">
                     <div class="container">
                         <header>
                             <h2>Data Transformation</h2>
@@ -127,16 +142,6 @@
                         </div>
                     </div>
                 </section>
-
-				<!-- File Download -->
-				<section id="pbix_file" class="six">
-                    <div class="container">
-                        <header>
-                            <h2>Power BI File Download</h2>
-                        </header>
-                        <a href="images/project_E_powerBI_creditdefault/defaults.pbix" download>[Download pbix-file here]</a>
-                    </div>
-                </section>
 				
 				<!-- Dataset Info & Download -->
 				<section id="datasetinfodownload" class="seven">
@@ -145,8 +150,8 @@
                             <h2>Dataset Information & Download</h2>
                         </header>
 						<p>Total of 30,002 records</p>
-						<p>CSV file</p>
-                        <a href="images/project_E_powerBI_creditdefault/Data.csv" download>[Download csv-file here]</a>
+						<p>Raw CSV file</p>
+                        <a href="images/project_E_powerBI_creditdefault/Data.csv" download>[Download csv-file(raw) here]</a>
 						<!-- <a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_C_tableau/project_c_data.csv.zip" target="_blank">[Download zip file via Github LFS here]</a> -->
 					</div>
 				</section>
